--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,12 @@
 {
+    "name" : "machine_search",
+        "description": "Search Engine App",
+        "license": "MIT",
+        "autoload": {
+            "psr-4": {
+                "App\\": "src"
+            }
+    },
     "autoload": {
         "psr-4": {
             "App\\": "src"
