--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,11 @@
 {
-    "name" : "machine_search",
+    "name" : "machine-search/search-wiki",
         "description": "Search Engine App",
         "license": "MIT",
         "autoload": {
             "psr-4": {
                 "App\\": "src"
             }
-    },
-    "autoload": {
-        "psr-4": {
-            "App\\": "src"
-        }
     },
     "autoload-dev": {
         "psr-4": {
@@ -20,7 +15,8 @@
     "require": {
         "symfony/http-client": "^5.0",
         "symfony/dom-crawler": "^5.0",
-        "symfony/css-selector": "^5.0"
+        "symfony/css-selector": "^5.0",
+        "symfony/console": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5"
